fixeo flex direccion mobile en contacto

--- a/css/style-contacto.css
+++ b/css/style-contacto.css
@@ -167,6 +167,7 @@ body .titulo-perfil #titulo-perfil {
   .version-mobile .redes-sociales {
     background-color: rgb(111, 96, 121);
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
