--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -115,6 +115,7 @@
         .redes-sociales {
             background-color: rgb(111, 96, 121);
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
             text-align: center;
